--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -1,5 +1,5 @@
 {
-  "throwBananaNum": 30,
+  "throwBananaNum": 100,
   "throwAndLike": 1,
   "throwAndDanmu": 1,
   "isLike": 1,
@@ -7,8 +7,8 @@
   "danmuPriority": 0,
   "danmuPool": [],
   "isShare": 1,
-  "bananaPriority": 0,
+  "bananaPriority": 1,
   "followUpPriority": [],
   "userAgent": "AcFun/6.39.0 (iPhone; iOS 14.3; Scale/2.00)",
-  "skipUpList": []
+  "skipUpList": [1282441]
 }
